[gd_scene load_steps=85 format=2]

[ext_resource path="res://Assets/Player/Captain with Sword/09-Idle Sword/Idle Sword 02.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Captain with Sword/09-Idle Sword/Idle Sword 03.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Captain with Sword/11-Jump Sword/Jump Sword 01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Captain with Sword/11-Jump Sword/Jump Sword 02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Captain with Sword/12-Fall Sword/Fall Sword 01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Captain with Sword/09-Idle Sword/Idle Sword 01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Captain with Sword/09-Idle Sword/Idle Sword 04.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Captain with Sword/09-Idle Sword/Idle Sword 05.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 03.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 04.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 06.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Captain with Sword/11-Jump Sword/Jump Sword 03.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 05.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Sounds/Jump/Jump.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Player/Captain with Sword/10-Run Sword/Run Sword 01.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Tscn/Player.gd" type="Script" id=17]
[ext_resource path="res://Assets/Player/Captain with Sword/15-Attack 1/Attack 1 01.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Captain with Sword/15-Attack 1/Attack 1 02.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Captain with Sword/16-Attack 2/Attack 2 02.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Captain with Sword/16-Attack 2/Attack 2 03.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/Captain with Sword/16-Attack 2/Attack 2 01.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/Captain with Sword/15-Attack 1/Attack 1 03.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/Captain with Sword/18-Air Attack 1/Air Attack 1 03.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/Captain with Sword/18-Air Attack 1/Air Attack 1 02.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player/Captain with Sword/17-Attack 3/Attack 3 02.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player/Captain with Sword/17-Attack 3/Attack 3 01.png" type="Texture" id=27]
[ext_resource path="res://Assets/Player/Captain with Sword/18-Air Attack 1/Air Attack 1 01.png" type="Texture" id=28]
[ext_resource path="res://Assets/Player/Captain with Sword/17-Attack 3/Attack 3 03.png" type="Texture" id=29]
[ext_resource path="res://Assets/Player/Captain with Sword/19-Air Attack 2/Air Attack 2 01.png" type="Texture" id=30]
[ext_resource path="res://Assets/Player/Captain with Sword/19-Air Attack 2/Air Attack 2 03.png" type="Texture" id=31]
[ext_resource path="res://Assets/Player/Captain with Sword/19-Air Attack 2/Air Attack 2 02.png" type="Texture" id=32]
[ext_resource path="res://Assets/Player/Sounds/Sword Attack/Sword-1.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/Player/Captain with Sword/14-Hit Sword/Hit Sword 04.png" type="Texture" id=34]
[ext_resource path="res://Assets/Player/Captain with Sword/14-Hit Sword/Hit Sword 03.png" type="Texture" id=35]
[ext_resource path="res://Assets/Player/Captain with Sword/14-Hit Sword/Hit Sword 01.png" type="Texture" id=36]
[ext_resource path="res://Assets/Player/Captain with Sword/14-Hit Sword/Hit Sword 02.png" type="Texture" id=37]

[sub_resource type="Animation" id=12]
resource_name = "Air-Attack-1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 25 ), ExtResource( 24 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Air-Attack-2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 30 ), ExtResource( 32 ), ExtResource( 31 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Attack-1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Attack-2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Attack-3"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 27 ), ExtResource( 26 ), ExtResource( 29 ) ]
}

[sub_resource type="Animation" id=51]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 34 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=52]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 37 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Air-Attack-1"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Air-Attack-2"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Attack-1"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Attack-2"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Attack-3"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/Air-Attack-1/node = SubResource( 25 )
states/Air-Attack-1/position = Vector2( 479, 78 )
states/Air-Attack-2/node = SubResource( 26 )
states/Air-Attack-2/position = Vector2( 893, 78 )
states/Attack-1/node = SubResource( 27 )
states/Attack-1/position = Vector2( 180, 682 )
states/Attack-2/node = SubResource( 28 )
states/Attack-2/position = Vector2( 479, 682 )
states/Attack-3/node = SubResource( 29 )
states/Attack-3/position = Vector2( 701, 682 )
states/Damage/node = SubResource( 53 )
states/Damage/position = Vector2( 1120, 571 )
states/Fall/node = SubResource( 30 )
states/Fall/position = Vector2( 898, 269 )
states/Idle/node = SubResource( 31 )
states/Idle/position = Vector2( 479, 400 )
states/Jump/node = SubResource( 32 )
states/Jump/position = Vector2( 479, 264 )
states/Run/node = SubResource( 33 )
states/Run/position = Vector2( 898, 407 )
transitions = [ "Idle", "Jump", SubResource( 34 ), "Jump", "Fall", SubResource( 35 ), "Fall", "Idle", SubResource( 36 ), "Idle", "Fall", SubResource( 37 ), "Idle", "Run", SubResource( 38 ), "Run", "Idle", SubResource( 39 ), "Idle", "Attack-1", SubResource( 40 ), "Attack-1", "Attack-2", SubResource( 41 ), "Attack-2", "Attack-3", SubResource( 42 ), "Attack-1", "Idle", SubResource( 43 ), "Attack-2", "Idle", SubResource( 44 ), "Attack-3", "Idle", SubResource( 45 ), "Jump", "Air-Attack-1", SubResource( 46 ), "Air-Attack-1", "Air-Attack-2", SubResource( 47 ), "Air-Attack-1", "Fall", SubResource( 48 ), "Air-Attack-2", "Fall", SubResource( 49 ), "Fall", "Air-Attack-1", SubResource( 50 ), "Idle", "Damage", SubResource( 54 ), "Damage", "Idle", SubResource( 55 ), "Run", "Damage", SubResource( 56 ), "Damage", "Run", SubResource( 57 ), "Fall", "Damage", SubResource( 58 ), "Damage", "Fall", SubResource( 59 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 6.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 17 )

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 10 )
emitting = false
amount = 3
lifetime = 0.35
speed_scale = 1.6
randomness = 0.2
local_coords = false
gravity = Vector2( 0, -98 )
angular_velocity = 4.0
linear_accel = 40.0
scale_amount = 4.0
scale_amount_random = 0.8

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 37 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Air-Attack-1 = SubResource( 12 )
anims/Air-Attack-2 = SubResource( 14 )
anims/Attack-1 = SubResource( 9 )
anims/Attack-2 = SubResource( 10 )
anims/Attack-3 = SubResource( 13 )
anims/Damage = SubResource( 51 )
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/RESET = SubResource( 52 )
anims/Run = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 24 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sounds" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )

[node name="Sword" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 33 )

[node name="RayCast" type="Position2D" parent="."]

[node name="RayHit" type="RayCast2D" parent="RayCast"]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 22, 0 )

[node name="RayWall" type="RayCast2D" parent="RayCast"]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayDamage" type="RayCast2D" parent="RayCast"]
enabled = true
cast_to = Vector2( 30, 0 )
